--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 /*pour appliqué le style sur touts les element*/
 *{
     /*définit la police de caractères pour tous les éléments de la page*/
-font-family: 'Roboto', sans serif;
+font-family: 'Roboto', sans-serif;
 /*définit la marge extérieure de tous les éléments de la page à zéro*/
 margin: 0;
 /*définit le remplissage interne de tous les éléments à zéro*/
 padding: 0;
 /*contrôle le modèle de boîte utilisé pour calculer la largeur et la hauteur totales d'un élément*/
 box-sizing: border-box;
+scroll-behavior: smooth;
 }
 /*ces styles s'appliquent à toutes les balises <header> */
 header{
@@ -27,8 +29,9 @@ header{
     padding: 10px 200px;
 }
 
-/*loo*/
+/*logo*/
 .logo{
+    
     /*pour supprime toute décoration de texte telle que les soulignements ou les barres transversales.*/
     text-decoration: none;
     /*pour définit la couleur du texte*/
@@ -39,6 +42,12 @@ header{
     font-weight: 700;
     /*définit la taille de la police à 1.6 fois la taille de la police de base de l'élément parent*/
     font-size: 1.6em;
+}
+.imgLogo{
+    width: 110px;
+    height: 90px;
+    margin: -17px -20px;
+    padding: -20px;
 }
 
 /*un sélecteur CSS qui cible les éléments de lien (<a>) qui sont enfants directs d'un élément avec la classe .navigation.*/
