--- a/css/style.css
+++ b/css/style.css
@@ -44,10 +44,10 @@ header{
     font-size: 1.6em;
 }
 .imgLogo{
-    width: 110px;
-    height: 90px;
-    margin: -17px -20px;
-    padding: -20px;
+    max-width: 100%;
+    width: 100px;
+    height: auto;
+    margin: -17px 0px;
 }
 
 /*un sélecteur CSS qui cible les éléments de lien (<a>) qui sont enfants directs d'un élément avec la classe .navigation.*/
@@ -131,9 +131,62 @@ section{
     transform: scale(1.1);
 }
 
+.about{
+    /* min-height: 100vh;
+    height: 100%;
+    width: 100%;
+    background: url(/images/background.jpg);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(1, 2fr);
+    align-items: center;
+    grid-gap: 3rem; */
+     /*Cela signifie que ces éléments vont occuper toute la largeur disponible de leur conteneur parent.*/
+     width: 100%;
+     /*définit la hauteur minimale de tous les éléments ayant la classe .main à 100% de la hauteur de la fenêtre visible (vh signifie "viewport height"). Cela garantit que ces éléments auront une hauteur minimale de 100% de la hauteur de l'écran, ce qui permet souvent de les faire remplir complètement l'écran, peu importe la taille de la fenêtre du navigateur.*/
+     min-height: 100vh;
+     display: inline-flex;
+     align-items: center;
+     /*définit une image de fond pour ces éléments et l'option "no-repeat" indique que l'image ne doit pas se répéter.*/
+     background: url(/images/background.jpg) no-repeat;
+     /*définit la taille de l'image de fond pour couvrir complètement l'élément ".main".*/
+     background-size: cover;
+     /*l'image sera centrée horizontalement et verticalement dans l'élément ".main".*/
+     background-position: center center;
+     align-items: center;
+     grid-gap: 3rem;
+}
 .social-icons a{
-    /*color: #fff;*/
+    width: 35px;
+    height: 35px;
     font-size: 2.5em;
     padding-right: 8px;
+    align-items: center;
+    justify-content: center;
+    margin-right: 35px;
+    margin-bottom: 30px;
 }
 
+.social-icons a:hover{
+    transform: scale(1.1);
+    color: #c019a6
+}
+
+.description{
+    margin-top: 20px;
+    color: #4204fd;
+    font-size: 1.5em;
+    font-weight: 500;    
+    letter-spacing: 1px;
+    margin-bottom: 30px;
+    padding-top: 200px;    
+}
+
+.aboutImg{
+    max-height: 100%;
+    width: 400px;
+    height: auto;
+    
+}
